# litellm-demo

./: pyproject.toml
src/litellm_demo/: .env  __init__.py  main.py
