[project]
name = "litellm-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aamirshafiq14", email = "aamirshafiq1407@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.63.3",
]

[project.scripts]
litellm-demo = "litellm_demo:main"
gemini = "litellm_demo.main:gemini"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
